fix clipping on program requirements wrappers
Addresses overflow and its disastrous consequences on the ability for developers to just get that money

--- a/site/src/pages/RoadmapPage/sidebar/ProgramRequirementsList.scss
+++ b/site/src/pages/RoadmapPage/sidebar/ProgramRequirementsList.scss
@@ -98,6 +98,10 @@
     }
   }
 
+  .MuiCollapse-root {
+    padding-inline: 2px;
+    margin-inline: -2px;
+  }
   .MuiCollapse-wrapperInner > :first-child {
     padding-top: 12px;
   }
